[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
modulate = Color( 0.823529, 0.384314, 1, 1 )
margin_left = 39.0
margin_top = 258.0
margin_right = 319.0
margin_bottom = 358.0
align = 1
placeholder_text = "Digite o número aqui"

[node name="LineEdit2" type="LineEdit" parent="."]
modulate = Color( 0.823529, 0.384314, 1, 1 )
margin_left = 39.0
margin_top = 452.0
margin_right = 319.0
margin_bottom = 552.0
align = 1
placeholder_text = "Digite o nome aqui"

[node name="Button" type="Button" parent="."]
modulate = Color( 0.823529, 0.384314, 1, 1 )
margin_left = 368.0
margin_top = 14.0
margin_right = 568.0
margin_bottom = 114.0
text = "Salvar número e nome"
clip_text = true
icon_align = 1

[node name="Button2" type="Button" parent="."]
modulate = Color( 0.823529, 0.384314, 1, 1 )
margin_left = 588.0
margin_top = 14.0
margin_right = 788.0
margin_bottom = 114.0
text = "Aumentar e exibir número"

[node name="Button3" type="Button" parent="."]
modulate = Color( 0.823529, 0.384314, 1, 1 )
margin_left = 806.0
margin_top = 14.0
margin_right = 1006.0
margin_bottom = 114.0
text = "Exibir nome"

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.184314, 0.113725, 0.27451, 1 )
margin_left = 487.0
margin_top = 258.0
margin_right = 855.0
margin_bottom = 387.0

[node name="ColorRect2" type="ColorRect" parent="."]
modulate = Color( 0.184314, 0.113725, 0.27451, 1 )
margin_left = 487.0
margin_top = 427.0
margin_right = 855.0
margin_bottom = 552.0

[node name="Label" type="Label" parent="."]
margin_left = 487.0
margin_top = 258.0
margin_right = 567.0
margin_bottom = 286.0
rect_scale = Vector2( 4.6, 4.6 )

[node name="Label2" type="Label" parent="."]
margin_left = 487.0
margin_top = 427.0
margin_right = 567.0
margin_bottom = 455.0
rect_scale = Vector2( 4.6, 4.6 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
